feat: funcionalidade de listar os dados do usuario logado.
