# swagger-output.json
@@ -45,6 +45,31 @@
         }
       }
     },
+    "/auth/usuario": {
+      "post": {
+        "tags": [
+          "Autenticação"
+        ],
+        "summary": "Endpoint para listar os dados do usuario logado",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/usuario": {
       "post": {
         "tags": [
